Fix pricing overlaps

--- a/_sass/_pricing.scss
+++ b/_sass/_pricing.scss
@@ -44,7 +44,6 @@
           display: block;
           margin-left: calc(32px + 12px);
           color: $brand-primary;
-          height: 15px;
           line-height: 15px;
           font-weight: 600;
           &.small-title {
